# distributed-rating-poc

./: .gitignore  Makefile  README.md  build-all-modules.sh  build.sh  cosmo-deploy.sh  docker-compose.yml  rating agent migration steps.md  start.sh  swagger.yml  wadm-local-to-cosmonic.yaml  wadm-local.yaml  wadm.yaml
.github/workflows/: build_api-gateway.yml  build_kv-balance-manager.yml  build_netflix-rating.yml  build_orange-rating.yml  build_postpaid-orange-vod-threshold-discount.yml  build_rating-coordinator.yml  build_sony-rating.yml  build_streaming-rating.yml  build_usage-collector-orange.yml  build_video-rating.yml  release.yml  release_api-gateway.yml  release_kv-balance-manager.yml  release_netflix-rating.yml  release_orange-customer-product-inventory-mock.yml  release_orange-rating.yml  release_orange-vod-metaverse.yml  release_postpaid-orange-vod-bucket.yml  release_postpaid-orange-vod-threshold-discount.yml  release_rating-coordinator.yml  release_sony-rating.yml  release_streaming-rating.yml  release_usage-collector-orange.yml  release_usage-collector-video-provider.yml  release_video-rating.yml
0.x/: README.md
0.x/api-gateway/: Cargo.toml  README.md
0.x/makefiles/: actor.mk
0.x/rating-agents/prepaid-orange-vod-oneshot-agent/: Cargo.toml
0.x/rating-agents/streaming-rating-agent/: Cargo.toml  wasmcloud.toml
0.x/rating-agents/streaming-rating-agent/src/: lib.rs
0.x/scripts/: deduct_balance.sh
0.x/seeding/: metaverse-vod-balance.json  seed-data.sh  usage-orange-1.json  usage-orange-2.json  yann-bucket.json  yann-customer.json
0.x/wit/: rating-coordinator.wit  ratingagent.wit  world.wit
1.0/: wadm.yaml
1.0/api-gateway/: Cargo.toml
1.0/balance-management/: .gitignore
1.0/metaverse-rating-agent/: Cargo.toml
1.0/rating-agent/: Cargo.toml
1.0/rating-agent-two/: wadm.yaml
1.0/rating-agent/src/: lib.rs
1.0/rating-agent/wit/: world.wit
1.x/: README.md  adding-new-component-in-project.md  build&deploy.sh  todo.md  wadm.yaml  wit-deps-used-versions.md
1.x/api-gateway/: Cargo.toml  local.wadm.yaml  wadm.yaml  wasmcloud.toml
1.x/balance-management/: Cargo.toml  wasmcloud.toml
1.x/balance-management/src/: lib.rs  serializer.rs
1.x/balance-management/wit/: deps.toml  types.wit  world.wit
1.x/commons/: .gitignore  Cargo.toml  README.md  wasmcloud.toml
1.x/commons/src/: dtos.rs  (+9 more)
1.x/metaverse-rating-agent/: Cargo.toml
1.x/metaverse-rating-agent/src/: lib.rs
1.x/metaverse-rating-agent/wit/: deps.toml
1.x/orange-vod-metaverse-agent/: Cargo.toml  local.wadm.yaml
1.x/orange-vod-rating-agent/: .gitignore  Cargo.toml  wasmcloud.toml
1.x/orange-vod-rating-agent/src/: lib.rs
1.x/orange-vod-rating-agent/wit/: deps.toml  world.wit
1.x/rating-coordicator/: Cargo.toml  wasmcloud.toml
1.x/rating-coordicator/src/: lib.rs  rating.rs  rating_reponse_builder.rs  types.rs  validation.rs
1.x/rating-coordicator/wit/: deps.toml  types.wit  world.wit
1.x/rating-coordinator/: .gitignore  Cargo.toml  local.wadm.yaml  wadm.yaml  wasmcloud.toml
1.x/seeding/: balance.json  seed-balance.sh
1.x/streaming-rating-agent/: Cargo.toml
1.x/video-rating-agent/: Cargo.toml  wasmcloud.toml
api-gateway/: Cargo.toml  Makefile  host_config.json  wasmcloud.toml
api-gateway/src/: lib.rs  types.rs
balance-management/balance-manager/: .gitignore  Cargo.toml  wasmcloud.toml
balance-management/kv-balance-manager/: Cargo.toml  wasmcloud.toml
balance/aggregate/: .gitignore  Cargo.toml  wasmcloud.toml
balance/eventcatalog/: README.md
balance/projector/: .gitignore  wasmcloud.toml
deployment/balance-uc/: build-balance-uc.sh  wadm-balance.yaml
deployment/distributed-balance-uc/: build-balance-uc.sh  wadm-balance.yaml
deployment/metaverse-uc/: cosmo-deploy.sh  wadm-metaverse-local-from-file.yaml  wadm-metaverse-oncosmonic-from-file.yaml  wadm-metaverse-oncosmonic.yaml
deployment/wash-local/: start.sh  wadm-from-file.yaml
interfaces/: rating-agent.smithy
mocks/orange-customer-product-inventory/: Cargo.toml  Makefile  wasmcloud.toml
mocks/usage-collector/: wasmcloud.toml
postman/: WASM.postman_collection.json
rating-agents/: README.md  actor.mk
rating-agents/aws-stor-rating-agent/: Cargo.toml  README.md  wasmcloud.toml
rating-agents/dropbox-syncstor-composite-horizontal-rating-agent/: Cargo.toml  README.md  wasmcloud.toml
rating-agents/dropbox-syncstor-composite-vertical-rating-agent/: Cargo.toml  README.md  wasmcloud.toml
rating-agents/orange-connectivity-rating-agent/: Cargo.toml  README.md
rating-agents/orange-connectivity-rating-agent/src/: lib.rs
rating-agents/orange-vod-rating-agent/: Cargo.toml  Makefile  wasmcloud.toml
rating-agents/orange-vod-rating-agent/src/: lib.rs  usage_proof_template.json
rating-agents/postpaid-orange-vod-threshold-discount-agent/: Cargo.toml  Makefile  README.md
rating-agents/postpaid-orange-vod-threshold-discount-agent/src/: lib.rs
rating-agents/prepaid-orange-vod-oneshot-cqrs-agent/: Cargo.toml  README.md
rating-agents/prepaid-orange-vod-oneshot-cqrs-agent/src/: lib.rs
rating-agents/sony-rating-agent/: Cargo.toml  Makefile  README.md  codegen.toml  wasmcloud.toml
rating-agents/sony-rating-agent/src/: lib.rs
rating-coordinator/: Cargo.toml  Makefile  README.md  issuer.nk  rating_coordinator_module.nk  wasmcloud.toml
rating-interface/: README.md  codegen.toml
rating-interface/rust/: Cargo.toml  README.md  build.rs  codegen.toml
rating-interface/rust/src/: balance.rs  bucket.rs  custom.rs  interface.rs  key_value_store_wrapper.rs  lib.rs  mock.rs  rating_reponse_builder.rs  usage_proof.rs
scripts/: create_balance.sh  create_balance_cmd.json  deduct_balance_cmd.json
seeding/: pascal-customer.json  seed-balance.sh  seed-metaverse.sh
usage-collector/: Cargo.toml  README.md
usage-collectors/usage-collector-dropbox/: Cargo.toml  wasmcloud.toml
usage-collectors/usage-collector-dropbox/src/: lib.rs
usage-collectors/usage-collector-orange/: Cargo.toml  Makefile  README.md  wasmcloud.toml
usage-collectors/usage-collector-orange/src/: lib.rs
wit/: balancemanager.wit
(+252 files in other folders)
