[package]
name = "api_gateway"
version = "0.1.0"
authors = [ "" ]
edition = "2021"
description = "RESTful API exposed to consumers of the rating service"

[lib]
crate-type = ["cdylib", "rlib"]
name = "api_gateway"

[dependencies]
serde = {version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
futures = "0.3"
form_urlencoded = "1.0"
wasmbus-rpc = "0.11"
wasmcloud-interface-httpserver = "0.9.0"
wasmcloud-interface-logging = "0.8.0"
rating_interface = { path = "../rating-interface/rust" }

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true