[package]
name = "metaverse-ratingagent"
edition = "2021"
version = "0.1.0"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
wit-bindgen = "0.30"
serde_json = "1.0.127"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"wasi:logging" = { path = "wit/deps/logging" }
"orange:balancemanager" = { path = "wit/deps/balance-manager" }