[package]
name = "orange-vod-ratingagent"
edition = "2021"
version = "0.1.0"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.30"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
futures = "0.3.31"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"wasi:keyvalue" = { path = "wit/deps/keyvalue" }
"wasi:logging" = { path = "wit/deps/logging" }
