[package]
name = "orange_vod_rating_agent"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "orange_vod_rating_agent"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
futures = "0.3"
form_urlencoded = "1.0"
wasmbus-rpc = "0.11"
wasmcloud-interface-keyvalue = "0.9.1"
wasmcloud-interface-logging = "0.8.0"
rating_interface = { path = "../../rating-interface/rust" }
uuid = { version = "1.3.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
getrandom = { version = "0.2", features = ["js"] }
chrono = "0.4.24"
tinytemplate = "1.2.1"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
