[package]
name = "postpaid_orange_vod_threshold_discount_agent"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "postpaid_orange_vod_threshold_discount_agent"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
futures = "0.3"
form_urlencoded = "1.0"
wasmbus-rpc = "0.11"
wasmcloud-interface-keyvalue = "0.9.1"
wasmcloud-interface-logging = "0.8.0"
rating_interface = { path = "../../rating-interface/rust" }
new_string_template = "1.4"
wasmcloud-interface-numbergen = "0.8.1"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
