[package]
name = "sony-rating-agent"
version = "0.1.1"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "sony_rating_agent"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0" , features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
futures = "0.3"
form_urlencoded = "1.0"
wasmbus-rpc = "0.11"
wasmcloud-interface-keyvalue = "0.9.1"

# build-dependencies needed for build.rs
[build-dependencies]
weld-codegen = "0.6.0"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
