[package]
name = "rating_interface"
version = "0.1.0"
authors = [ "" ]
edition = "2021"
description = ""

# when publishing to crates.io, freeze src by omitting build.rs
exclude = [ "build.rs" ]

[lib]
crate-type = ["cdylib", "rlib"]
name = "rating_interface"

[dependencies]
async-trait = "0.1"
serde = {version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
futures = "0.3"
form_urlencoded = "1.0"
wasmbus-rpc = "0.11"
wasmcloud-interface-keyvalue = "0.9.1"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true

[features]
default = []

[dev-dependencies]
base64 = "0.13"

# build-dependencies needed for build.rs
[build-dependencies]
weld-codegen = "0.5.0"