[package]
name = "usage-collector-dropbox"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "usage_collector_dropbox"

[dependencies]
futures = "0.3"
wasmbus-rpc = "0.11"
wasmcloud-interface-keyvalue = "0.9.1"
wasmcloud-interface-logging = "0.8.0"
rating_interface = { path = "../../rating-interface/rust" }

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
