[package]
name = "usage-collector-orange"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "usage_collector_orange"

[dependencies]
futures = "0.3"
form_urlencoded = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
wasmbus-rpc = "0.11"
wasmcloud-interface-keyvalue = "0.9.1"
wasmcloud-interface-logging = "0.8.0"
rating_interface = { path = "../../rating-interface/rust" }

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
