[package]
name = "prepaid-orange-vod-oneshot-agent"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "prepaid_orange_vod_oneshot_agent"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
futures = "0.3"
form_urlencoded = "1.0"
new_string_template = "1.4"
wasmbus-rpc = "0.14.0"
wasmcloud-interface-logging = "0.10.0"
rating_interface = { path = "../../rating-interface/rust" }

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"

